--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,6 @@
 [egg_info]
-tag_build = 
-tag_svn_revision = 0
-tag_date = 0
+tag_build = .dev
+tag_svn_revision = 1
 
 [aliases]
 release = egg_info --no-svn-revision --tag-build '' sdist bdist_egg
